@@ -9,7 +9,6 @@ sparse_FCN_FILES = \
   sparse/nonzeros.m \
   sparse/pcg.m \
   sparse/pcr.m \
-  sparse/spalloc.m \
   sparse/spaugment.m \
   sparse/spconvert.m \
   sparse/spdiags.m \
