@@ -1,5 +1,10 @@
 2010-04-13  Jaroslav Hajek  <highegg@gmail.com>
 
+	* DLD-FUNCTIONS/sparse.cc (Fspalloc): New DEFUN.
+	* ov-base.cc (octave_base_value::nzmax): Return numel by default.
+
+2010-04-13  Jaroslav Hajek  <highegg@gmail.com>
+
 	* ov-base-sparse.cc (octave_base_sparse::assign): Rewrite.
 	* ov-cx-sparse.cc (octave_sparse_complex_matrix::assign 
 	(const octave_value_list& idx, const SparseMatrix& rhs)): Remove.
